--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- changed to header  -->
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -25,60 +26,70 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+    <!-- above section are are the wrappers for the top clickable links -->
     <div class="hero"></div>
     <div class="content">
-        <div id="search-engine-optimization" div class="search-engine-optimization">
+        <!-- Below i found there was a missing ID= for the "search-engine-optimization,
+            by adding that i was able to fix the broken link." -->
+        <section id="search-engine-optimization" div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"alt="Image of a circle of Online webtools" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"alt="Image of a Graph raising up with Reputation." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"alt="Image of Online/Social Media Marketing references on a table." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+     </div> 
+ <!-- Section above will mainly be the top 3 links seen connect with the ID and Class tags, these are also links to the paragraphs  pertaining to the information on all 3 of the topics. -->
+
+
     <div class="benefits">
-        <div class="benefit-lead">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png"alt="Image of a Cog funneling into Revenue" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png"alt="Lightbulb in place of a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png">  </img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+
+            <!-- Above section is the category of the 3 short sentences with images hanging on the right side of the page (Lead generation,Brand Awareness, and Cost Management) -->
+        </section>
     </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <!-- changed to footer -->
+    <footer class="footer">
+        <h3>Made with ❤️️ by Horiseon</h3>
+        <!-- Header above was originally an h2 which was out of sequential order, went ahead and modified this to an h3. -->
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
